[gd_scene load_steps=8 format=4 uid="uid://b81yl7ugq466u"]

[ext_resource type="FontFile" uid="uid://b66nc4dsrjg1t" path="res://assets/fonts/normal_font.ttf" id="1_2tyh5"]
[ext_resource type="Script" uid="uid://dlda45lx3ar5o" path="res://content/gui/start_screen.gd" id="1_w33ff"]
[ext_resource type="Texture2D" uid="uid://c8v2wyt438ykn" path="res://assets/gui/gui_button.png" id="2_w33ff"]
[ext_resource type="Texture2D" uid="uid://kj7hbkpr0ac7" path="res://assets/gui/menu_home_button.png" id="3_22nbq"]
[ext_resource type="PackedScene" uid="uid://61ajonhq2g6l" path="res://content/gui/level_grid.tscn" id="4_noill"]
[ext_resource type="Script" uid="uid://pv2w6bme65lh" path="res://content/gui/level_grid.gd" id="5_vdpax"]
[ext_resource type="TileSet" uid="uid://dfngjymfs5wjk" path="res://assets/tiles/global_tile_map.tres" id="6_4eq4g"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_w33ff")

[node name="TitleUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TitleUI"]
layout_mode = 0
offset_left = 112.0
offset_top = 29.0
offset_right = 208.0
offset_bottom = 148.0
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="TitleUI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_2tyh5")
theme_override_font_sizes/font_size = 13
text = "Bomb Miner"
horizontal_alignment = 1

[node name="PlayButton" type="TextureButton" parent="TitleUI/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_w33ff")

[node name="Label" type="Label" parent="TitleUI/VBoxContainer/PlayButton"]
layout_mode = 2
offset_left = 20.0
offset_top = 7.0
offset_right = 78.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(0.0529348, 0.126245, 0.206312, 1)
theme_override_fonts/font = ExtResource("1_2tyh5")
theme_override_font_sizes/font_size = 10
text = "Play Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="TextureButton" parent="TitleUI/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_w33ff")

[node name="Label" type="Label" parent="TitleUI/VBoxContainer/MenuButton"]
layout_mode = 2
offset_left = 1.0
offset_right = 95.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(0.0529348, 0.126245, 0.206312, 1)
theme_override_fonts/font = ExtResource("1_2tyh5")
theme_override_font_sizes/font_size = 10
text = "Level Select"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="TitleUI/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_w33ff")

[node name="Label" type="Label" parent="TitleUI/VBoxContainer/SettingsButton"]
layout_mode = 2
offset_left = 1.0
offset_right = 96.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(0.0529348, 0.126245, 0.206312, 1)
theme_override_fonts/font = ExtResource("1_2tyh5")
theme_override_font_sizes/font_size = 10
text = "Change Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuUI" type="Control" parent="."]
anchors_preset = 0
offset_left = 320.0
offset_right = 640.0
offset_bottom = 192.0

[node name="HomeButton" type="TextureButton" parent="MenuUI"]
layout_mode = 1
offset_right = 17.0
offset_bottom = 17.0
texture_normal = ExtResource("3_22nbq")

[node name="LevelGrid" parent="MenuUI" instance=ExtResource("4_noill")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -48.0
offset_right = 96.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_vdpax")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAATAAwAAAAFAAMAAAATAAsAAAACAAEAAAATAAoAAAACAAEAAAATAAkAAAACAAEAAAATAAgAAAACAAEAAAATAAcAAAACAAEAAAATAAYAAAACAAEAAAATAAUAAAACAAEAAAATAAQAAAACAAAAAAATAAEAAAACAAIAAAATAAAAAAACAAEAAAATAP//AAAFAAAAAAASAAwAAAABAAIAAAASAAsAAAABAAEAAAASAAoAAQAEAAQAAAASAAkAAAABAAEAAAASAAQAAAABAAAAAAASAAAAAAABAAEAAAASAP//AAABAAAAAAARAAwAAAABAAIAAAARAAsAAQAEAAQAAAARAAoAAQAEAAQAAAARAAkAAAABAAEAAAARAAQAAAAAAAAAAAARAAAAAAABAAEAAAARAP//AAABAAAAAAAQAAwAAAABAAIAAAAQAAsAAAABAAEAAAAQAAoAAAAGAAIAAAAQAAkAAAAAAAEAAAAQAAAAAAABAAEAAAAQAP//AAABAAAAAAAPAAwAAAABAAIAAAAPAAsAAAABAAEAAAAPAAoAAAABAAAAAAAPAAAAAAAGAAEAAAAPAP//AAABAAAAAAAOAAwAAAABAAIAAAAOAAsAAAABAAEAAAAOAAoAAAABAAAAAAAOAP//AAABAAAAAAANAAwAAAABAAIAAAANAAsAAAAGAAIAAAANAAoAAAAAAAAAAAANAP//AAAGAAAAAAAMAAwAAAABAAIAAAAMAAsAAAABAAAAAAAMAP//AAABAAMAAAALAAwAAAABAAIAAAALAAsAAAABAAAAAAALAP//AAABAAMAAAAKAAwAAAABAAIAAAAKAAsAAAABAAAAAAAKAP//AAABAAMAAAAJAAwAAAABAAIAAAAJAAsAAAABAAAAAAAJAP//AAABAAMAAAAIAAwAAAABAAIAAAAIAAsAAAABAAAAAAAIAP//AAABAAMAAAAHAAwAAAABAAIAAAAHAAsAAAABAAAAAAAHAP//AAABAAMAAAAGAAwAAAABAAIAAAAGAAsAAAABAAAAAAAGAAAAAAACAAIAAAAGAP//AAAFAAAAAAAFAAwAAAABAAIAAAAFAAsAAAABAAAAAAAFAAEAAAACAAIAAAAFAAAAAAAFAAEAAAAFAP//AAABAAAAAAAEAAwAAAABAAIAAAAEAAsAAAABAAAAAAAEAAEAAAABAAIAAAAEAAAAAAABAAEAAAAEAP//AAABAAAAAAADAAwAAAABAAIAAAADAAsAAAAFAAIAAAADAAoAAAACAAAAAAADAAIAAAACAAIAAAADAAEAAAAFAAEAAAADAAAAAAABAAEAAAADAP//AAABAAAAAAACAAwAAAABAAIAAAACAAsAAAABAAEAAAACAAoAAAABAAAAAAACAAIAAAABAAIAAAACAAEAAAABAAEAAAACAAAAAQAGAAQAAAACAP//AAABAAAAAAABAAwAAAABAAIAAAABAAsAAAABAAEAAAABAAoAAAAFAAIAAAABAAkAAAACAAAAAAABAP//AAABAAAAAAAAAAwAAAABAAIAAAAAAAsAAAABAAEAAAAAAAoAAAABAAEAAAAAAAkAAAAFAAIAAAAAAAgAAAACAAEAAAAAAAcAAAACAAEAAAAAAAYAAAACAAEAAAAAAAUAAAAFAAEAAAAAAAQAAAABAAEAAAAAAAMAAAABAAEAAAAAAP//AAABAAAAAAD//wwAAAAAAAIAAAD//wsAAAAAAAEAAAD//woAAAAAAAEAAAD//wkAAAAAAAEAAAD//wgAAAAAAAEAAAD//wcAAAAAAAEAAAD//wYAAAAAAAEAAAD//wUAAAAAAAEAAAD//wQAAAAAAAEAAAD//wMAAAAAAAEAAAD//wIAAAAAAAEAAAD//wEAAAAAAAEAAAD//wAAAAAAAAEAAAD/////AAAAAAAAAAABAAIAAAAFAAEAAAABAAEAAQAGAAQAAAABAAAAAQAGAAQAAAAAAAIAAAABAAEAAAAAAAEAAQAGAAQAAAAAAAAAAAABAAEAAAAOAAAAAAABAAIAAAANAAAAAAAAAAIAAAABAAMAAAACAAEAAAABAAQAAAACAAEAAAABAAUAAAACAAIAAAAGAAoAAQAMAAAAAAAHAAoAAQAMAAAAAAAIAAoAAQAMAAAAAAAJAAoAAQAMAAAAAAAKAAoAAQAMAAAAAAALAAoAAQAMAAAAAAAMAAoAAQAMAAAAAAAUAAwAAAABAAMAAAAUAP//AAABAAMAAAAEAAoAAQAMAAAAAAAFAAoAAQAMAAAAAAASAAEAAAABAAIAAAARAAEAAAABAAIAAAAQAAEAAAABAAIAAAAPAAEAAAAAAAIAAAASAAgAAAABAAEAAAASAAcAAAABAAEAAAASAAYAAAABAAEAAAASAAUAAAABAAEAAAARAAgAAAABAAEAAAARAAUAAAAAAAEAAAARAAcAAAAGAAIAAAARAAYAAAAAAAEAAAAQAAgAAAAAAAEAAAAQAAcAAAAAAAAAAAAoAAwAAAAHAAMAAAAoAAsAAAADAAEAAAAoAAoAAAADAAEAAAAoAAkAAAADAAEAAAAoAAgAAAADAAEAAAAoAAcAAAADAAEAAAAoAAYAAAADAAEAAAAoAAUAAAADAAEAAAAoAAQAAAADAAEAAAAoAAMAAAADAAEAAAAoAAIAAAADAAEAAAAoAAEAAAADAAEAAAAoAAAAAAADAAEAAAAoAP//AAAHAAAAAAAnAAwAAAABAAMAAAAnAP//AAABAAMAAAAmAAwAAAABAAMAAAAmAP//AAABAAMAAAAlAAwAAAABAAMAAAAlAP//AAABAAMAAAAkAAwAAAABAAMAAAAkAP//AAABAAMAAAAjAAwAAAABAAMAAAAjAP//AAABAAMAAAAiAAwAAAABAAMAAAAiAP//AAABAAMAAAAhAAwAAAABAAMAAAAhAP//AAABAAMAAAAgAAwAAAABAAMAAAAgAP//AAABAAMAAAAfAAwAAAABAAMAAAAfAP//AAABAAMAAAAeAAwAAAABAAMAAAAeAP//AAABAAMAAAAdAAwAAAABAAMAAAAdAP//AAABAAMAAAAcAAwAAAABAAMAAAAcAP//AAABAAMAAAAbAAwAAAABAAMAAAAbAP//AAABAAMAAAAaAAwAAAABAAMAAAAaAP//AAABAAMAAAAZAAwAAAABAAMAAAAZAP//AAABAAMAAAAYAAwAAAABAAMAAAAYAP//AAABAAMAAAAXAAwAAAABAAMAAAAXAP//AAABAAMAAAAWAAwAAAABAAMAAAAWAP//AAABAAMAAAAVAAwAAAABAAMAAAAVAP//AAABAAMAAAA=")
tile_set = ExtResource("6_4eq4g")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 96)

[connection signal="pressed" from="TitleUI/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TitleUI/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="TitleUI/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuUI/HomeButton" to="." method="_on_home_button_pressed"]
